fix: new positions